# spotify-playlist-utils

./: .gitignore  MODULE.bazel  README.md  requirements.in  requirements.txt
splu/: BUILD.bazel  __init__.py  client.py  iterate.py  lookup.py
splu/backup/: BUILD.bazel  albums.py  main.py  playlists.py  tracks.py
splu/types/: BUILD.bazel  __init__.py  albums.py  artists.py  base.py  images.py  playlists.py  tracks.py  users.py
src/: BUILD.bazel  main.py
