load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "splu",
    srcs = [
        "client.py",
        "iterate.py",
        "lookup.py",
    ],
    deps = [
        "//splu/types",
        "@pypi//cachetools:pkg",
        "@pypi//spotipy:pkg",
    ],
    visibility = ["//visibility:public"],
)
